--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -39,7 +40,7 @@
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-  font-family: 'Inter', sans-serif;
+font-family: 'Roboto', sans-serif;
   }
   
   body.lock {
@@ -91,3 +92,132 @@
     font-size: inherit;
     font-weight: 400;
   }
+
+
+.main__container {
+    width: 100%;
+    min-height: 100vh;
+    background-color: rgba(0, 156, 166, 1);
+    position: relative;
+}
+.language__logo {
+    width: 100%;
+    height: 60px;
+    background-color: #fff;
+    box-shadow: 0px -9px 61px rgba(0, 0, 0, 0.25);
+    padding: 0px 3%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 20;
+}
+.logo__container {
+}
+.language__container {
+    border: 1px solid rgba(188, 26, 26, 0.5);
+    border-radius: 10px;
+    height: 40px;
+    display: flex;
+        box-shadow: inset 0 0 0 1px rgba(255,255,255,.2);
+}
+.language_element {
+    display: block;
+    height: 100%;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #BC1A1A;
+    font-weight: 400;
+    border-radius: 9px;
+}
+.active_{
+    background-color: #BC1A1A;
+    color: #fff;
+}
+
+.main__image__pc{
+    position: absolute;
+    right: 0;
+    z-index: 10;
+    top: 60px;
+}
+
+.main__form__container{
+    max-width: 680px;
+    margin: 0 auto;
+    height: 100%;
+
+    padding-top: 150px;
+}
+.main__container__desc {
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 1.71;
+    text-align: center;
+    color: #fff;
+}
+.main__container__form {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 47px;
+    margin-top: 40px;
+}
+.form__desc {
+    color: #222A32;
+    font-weight: 600;
+}
+.form__input__container {
+    width: 100%;
+    height: 50px;
+    border: 1px solid #cbcbcb;
+    border-radius: 6px;
+    margin-top: 16px;
+    padding: 0 20px;
+    font-size: 15px;
+    color: #222A32;
+}
+.form__input__container input{
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
+}
+.form__input__container_textarea {
+    width: 100%;
+    height: 140px;
+    border: 1px solid #cbcbcb;
+    border-radius: 6px;
+    margin-top: 16px;
+    padding: 12px 20px;
+    font-size: 15px;
+    color: #222A32;
+}
+.form__input__container_textarea textarea{
+    width: 100%;
+    height: 100%;
+    resize: none;
+}
+.form__button {
+    margin-top: 20px;
+    width: 100%;
+    text-align: center;
+}
+.form__button input{
+    background-color: #BC1A1A;
+    color: #fff;
+    padding: 10px 45px;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
