--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ font-family: 'Roboto', sans-serif;
     width: 100%;
     text-align: center;
 }
-.form__button input{
+.form__button button{
     background-color: #BC1A1A;
     color: #fff;
     padding: 10px 45px;
