--- a/admin_AGP_2023/style/style.css
+++ b/admin_AGP_2023/style/style.css
@@ -182,7 +182,7 @@ padding: 40px;
 .main__list__desc {
     display: flex;
     flex-direction: column;
-    width: 700px;
+    width: 800px;
     background-color: #fff;
     padding: 15px;
     border-radius: 10px;
@@ -196,15 +196,17 @@ padding: 40px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.11);
 }
 .list__desc__id {
-    width: 30px;
+    width: 80px;
 }
 .list__desc__name {
-    width: 100px;
+    width: 140px;
 }
 .list__desc__surname {
-    width: 150px;
+    width: 190px;
 }
-
+.list__desc__wp{
+    width: 100px;
+}
 .main__list__wrapper {
     margin-top: 20px;
 }
@@ -224,11 +226,17 @@ padding: 40px;
     width: 145px;
 }
 .wrapper__element_surname {
-    width: 150px;
+    width: 190px;
+}
+.list__desc__phone{
+    margin-left: 20px;
+    width: 180px;
 }
 
-
-
+.wrapper__element_number{
+    margin-left: 20px;
+    width: 175px;
+}
 
 
 .open_popup{
